--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <small>
-    <%= link_to "One Month Rails", "http://onemonthrails.com" %>
-    by Mattan Griffel
+    <%= link_to "Made By Diesel", "http://madebydiesel.com" %>
+    Made By Diesel
   </small>
 </div>
