--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,9 @@
 
 <h1>About</h1>
 <p>
-  <%= link_to "One Month Rails", "http://onemonthrails.com" %>
-  is a project to teach 
-  <%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
-  in one month. This is the sample application.
+	Pinboard is an application to collect and store images and ideas for inspiration. 
+  <%= link_to "Made By Diesel", "http://madebydiesel.com" %>
+  
 </p>
 
 
