--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,9 @@
   <h2>You're logged in!</h2>
 <% else %>
   <div class="hero-unit">
-    <h1>Welcome to One Month Rails!</h1>
+    <h1>Welcome to Pinboard!</h1>
     <p>
-        You've found the home page for the
-        <%= link_to "One Month Rails", "http://onemonthrails.com" %>    
-        application.
+        Pin items of visual inspiration and save that brain space.
     </p>
     <p>  
         <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
