--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -2,10 +2,10 @@
   <h1>You're logged in!</h1>
 <% else %>
   <div class="hero-unit">
-    <h1>Welcome to One Month Rails!</h1>
+    <h1>Welcome to Pinboard</h1>
     <p>
         You've found the home page for the
-        <%= link_to "One Month Rails", "http://onemonthrails.com" %>    
+        <%= link_to "Made By Diesel", "http://madebydiesel.com" %>    
         application.
     </p>
     <p>  
