--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,5 @@
 <div class="footer">
   <small>
-    <%= link_to "Made By Diesel", "http://madebydiesel.com" %>
-    Made By Diesel
+    Hand crafted: <%= link_to "Made By Diesel", "http://madebydiesel.com" %>
   </small>
 </div>
