--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -4,9 +4,7 @@
   <div class="hero-unit">
     <h1>Welcome to Pinboard</h1>
     <p>
-        You've found the home page for the
-        <%= link_to "Made By Diesel", "http://madebydiesel.com" %>    
-        application.
+        Save it, share it, remember it...      
     </p>
     <p>  
         <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
