--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,7 @@
   <div class="hero-unit">
     <h1>Welcome to Pinboard!</h1>
     <p>
-        Pin items of visual inspiration and save that brain space.
-    </p>
+        Save it, share it, remember it... 
     <p>  
         <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
     </p>
